--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     About Me
 </h2>
 </div>
-<div class='cont'>
+<div class= 'content'>
     <p id='about1'>
         Light Content. See footer.
     </p>
