--- a/contact.html
+++ b/contact.html
@@ -28,58 +28,57 @@
                     </nav>
   </header>
   </div>
+
   <section class='full'>
-    <section id='contact'>
-<div class='title'>
-    <h2>
-        Contact
-    </h2>
-</div>
-<div class= 'cont2'>
-<form id= 'cntf'>
-    <label>Name</label>
-    <br>
-    <input type='text' value= 'John Smith'/>
-    <br>
-    <label>Email</label>
-    <br>
-    <input type='text' value='example@gmail.com'/>
-    <br>
-    <label>Message</label>
-    <br>
-    <textarea cols='95' rows='15'>
-    </textarea>
-    <input type= 'submit' value='Submit' id='submit'/>
-</form>
-
-</div>
-</section>
-
-<section id='connect'>
-    <div class= 'title'>
-   <h3>Connect with Me:</h3>
-   </div>
-   <div class='cont2'>
-        <ul>
-            <li>
-                <a href="https://github.com/chelsg7" target='_blank' >
-                <img src="assets/images/git.png" alt='github'/>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/chelsea-gieck-44ab2b2a/" target='_blank'>
-                <img src="assets/images/link.png" alt='linkedin'/>
-            </a>
-            </li>
-            <li>
-                <a href="https://stackexchange.com/users/12884145/chegi7" target='_blank'>
-                <img src="assets/images/stack.png" alt='stack'/>
-            </a>
-            </li>
-        </ul>
-        </div>
-   </section>
-</section>
+        <section id= 'contact'>
+            <div class='title'>
+                <h2>
+                    Contact
+                </h2>
+            </div>
+            <div class= 'content'>
+                    <form id= 'cntf'>
+                            <label>Name</label>
+                            <br>
+                            <input type='text' value= 'John Smith'/>
+                            <br>
+                            <label>Email</label>
+                            <br>
+                            <input type='text' value='example@gmail.com'/>
+                            <br>
+                            <label>Message</label>
+                            <br>
+                            <textarea cols='95' rows='15'>
+                            </textarea>
+                            <input type= 'submit' value='Submit' id='submit'/>
+                        </form>
+                        </div>
+                        </section>
+                        <section id='connect'>
+                            <div class= 'title'>
+                                <h3>Connect with Me:</h3>
+                            </div>
+                            <div class='cont2'>
+                                <ul>
+                                    <li>
+                                        <a href="https://github.com/chelsg7" target='_blank' >
+                                            <img src="assets/images/git.png" alt='github'/>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/in/chelsea-gieck-44ab2b2a/" target='_blank'>
+                                            <img src="assets/images/link.png" alt='linkedin'/>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://stackexchange.com/users/12884145/chegi7" target='_blank'>
+                                            <img src="assets/images/stack.png" alt='stack'/>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </section>
+                    </section>
 <footer>
         <p id= 'foot'>
                 © Copyright 2018 Chelsea Gieck
