--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
   <div class=  'title'>
     <h2>Portfolio</h2>
   </div>
-<div class= 'cont2'>
+<div class= 'content'>
     <!-- photo portfolio table-->
     <table>
         <tr>
