--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang= "en">
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chelsea's Index Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type= 'text/css' href='assets/css/reset.css'/>
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
-
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Contact Me</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type= 'text/css' href='assets/css/reset.css'/>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+        <script src="main.js"></script>
+      </head>
 <body>
     <div id='headbox'>
     <header>
